--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 
-  <title>React App</title>
-  
+  <title>Brent Albers Portfolio</title>
 </head>
 
 <body>
